[project]
name = "taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Francisco Filho", email = "francisco@capimgrosso.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "google-genai>=1.20.0",
    "ollama>=0.5.1",
    "openai>=1.88.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
taskflow = "taskflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
